# switchboard-api

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build.sh  go.mod  package-lock.json  package.json  pom.xml  tsconfig.json
cpp/: Enum_generated.h  FeedRequestAccept_generated.h  FeedRequestAck_generated.h  FeedRequestReject_generated.h  FeedRequest_generated.h  LiquidationOrder_generated.h  MDSnapshotL2_generated.h  Message_generated.h  PublicTrade_generated.h  SessionStatus_generated.h
docs/: README.md
flatbuffers/: Allocation.fbs  BusinessMessageReject.fbs  Enum.fbs  ExecutionReport.fbs  FeedRequest.fbs  FeedRequestAccept.fbs  FeedRequestAck.fbs  FeedRequestReject.fbs  Heartbeat.fbs  LiquidationOrder.fbs  MDSnapshotL2.fbs  Market.fbs  MarketDataAcknowledgement.fbs  MarketDataRequest.fbs  MarketDataRequestReject.fbs  MarketDataSnapshot.fbs  Message.fbs  Metric.fbs  NewOrderSingle.fbs  OrderCancelReject.fbs  OrderCancelRequest.fbs  OrderReplaceRequest.fbs  PublicTrade.fbs  Quote.fbs  QuoteAcknowledgement.fbs  QuoteCancel.fbs  QuoteRequest.fbs  QuoteRequestReject.fbs  Reject.fbs  SessionStatus.fbs  (+2 more)
python/: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
python/com/reactivemarkets/papi/: Body.py  FeedRequest.py  FeedRequestAck.py  MDSnapshotL2.py  Message.py  PublicTrade.py
python/reactive/papi/: Body.py  FeedRequest.py  FeedRequestAccept.py  FeedType.py  LiquidationOrder.py  MDLevel2.py  MDSnapshotL2.py  Message.py  PublicTrade.py  SessionStatus.py  Side.py  SubReqType.py
python/reactivemarkets/papi/: FeedRequestReject.py  MDSnapshotL2.py
(+73 files in other folders)
