[metadata]
name = reactive-papi
description = reactive-platform: Reactive Platform flatbuffer api
long_description = file: README.md
url = https://www.reactivemarkets.com
project_urls =
    Source=https://github.com/reactivemarkets/platform-api
    Tracker=https://github.com/reactivemarkets/platform-api/issues
author = reactivemarkets/developers
maintainer = reactivemarkets/developers
author-email = developers@reactivemarkets.com
long_description_content_type = text/markdown
keywords = reactive platform api
license = Apache
license_file = LICENSE
classifiers =
        # Classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        Development Status :: 4 - Beta
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS :: MacOS X
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Utilities
platforms = any

[options]
python_requires = >=3.7
install_requires =
    flatbuffers
    numpy>=1.15.4
setup_requires =
  setuptools_scm

zip_safe = False
include_package_data = True

[options.package_data]
* = *.txt, *.rst
